--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@astrojs/check": "0.7.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/lexend": "5.0.20",
     "astro": "4.10.2",
     "tailwindcss": "^3.4.4",
     "typescript": "5.4.5"
