--- a/biome.jsonc
+++ b/biome.jsonc
@@ -44,7 +44,8 @@
 			"correctness": {},
 			"nursery": {
 				"all": true,
-				"noUndeclaredDependencies": "off"
+				"noUndeclaredDependencies": "off",
+				"useImportExtensions": "off"
 			},
 			"performance": { "all": true },
 			"security": { "all": true },
