ci(format): Astroのフォーマットはastroに任せる
biomeのformatterが対応していないため、AstroのVSCode拡張機能でフォーマットさせる

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -15,6 +15,7 @@
 	},
 	"formatter": {
 		"enabled": true,
+		"ignore": ["./**/*.astro"],
 		"attributePosition": "multiline",
 		"indentStyle": "tab",
 		"indentWidth": 2,
