--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"editor.defaultFormatter": "biomejs.biome",
+  "[astro]": {
+    "editor.defaultFormatter": "astro-build.astro-vscode"
+  },
 	"editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.organizeImports.biome": "never"
