--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "packageManager": "pnpm@9.5.0",
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
+    "@tailwindcss/typography": "0.5.13",
     "lefthook": "1.7.2"
   }
 }
