--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@astrojs/react": "3.6.0",
     "@astrojs/tailwind": "5.1.0",
     "@fontsource-variable/lexend": "5.0.20",
+    "@fontsource-variable/montserrat": "5.0.19",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "astro": "4.10.2",
