--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@astrojs/check": "0.7.0",
     "@astrojs/react": "3.6.0",
     "@astrojs/tailwind": "5.1.0",
+    "@expressive-code/plugin-line-numbers": "0.35.3",
     "@fontsource-variable/lexend": "5.0.20",
     "@fontsource-variable/montserrat": "5.0.19",
     "@iconify-json/lucide": "1.1.200",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "astro": "4.10.2",
+    "astro-expressive-code": "^0.35.3",
     "astro-icon": "1.1.0",
     "clsx": "2.1.1",
     "react": "18.3.1",
