--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "clsx": "2.1.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "rehype-autolink-headings": "7.1.0",
+    "rehype-external-links": "3.0.0",
+    "rehype-slug": "6.0.0",
     "tailwind-merge": "2.4.0",
     "tailwindcss": "3.4.4",
     "typescript": "5.4.5"
