chore: astro-pagefind integrationを追加

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "corepack": "corepack enable pnpm",
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "astro check && astro build && pnpm build:pagefind",
+    "build:pagefind": "pagefind --site dist",
     "preview": "astro preview",
     "check": "pnpm check:astro && pnpm check:biome",
     "check:astro": "astro check",
@@ -29,7 +30,9 @@
     "astro": "4.10.2",
     "astro-expressive-code": "^0.35.3",
     "astro-icon": "1.1.0",
+    "astro-pagefind": "1.5.0",
     "clsx": "2.1.1",
+    "pagefind": "1.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "rehype-autolink-headings": "7.1.0",
