--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "check:biome": "biome check .",
     "format": "biome format --write .",
     "lint": "biome lint --write .",
+    "test": "vitest",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/check": "0.7.0",
     "@astrojs/react": "3.6.0",
+    "@astrojs/rss": "4.0.7",
     "@astrojs/tailwind": "5.1.0",
     "@expressive-code/plugin-line-numbers": "0.35.3",
     "@fontsource-variable/lexend": "5.0.20",
@@ -38,6 +40,7 @@
     "rehype-autolink-headings": "7.1.0",
     "rehype-external-links": "3.0.0",
     "rehype-slug": "6.0.0",
+    "sanitize-html": "2.13.0",
     "tailwind-merge": "2.4.0",
     "tailwindcss": "3.4.6",
     "typescript": "5.4.5"
@@ -46,6 +49,9 @@
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
     "@tailwindcss/typography": "0.5.13",
-    "lefthook": "1.7.2"
+    "@types/node": "20.14.11",
+    "@types/sanitize-html": "2.11.0",
+    "lefthook": "1.7.2",
+    "vitest": "2.0.3"
   }
 }
