--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,20 +1,20 @@
-name: lint
+name: test
 on:
   pull_request:
     branches: [main]
     paths:
       - "package.json"
       - "src/**"
-      - ".github/workflows/lint.yml"
+      - ".github/workflows/test.yml"
   push:
     branches: [main]
     paths:
       - "package.json"
       - "src/**"
-      - ".github/workflows/lint.yml"
+      - ".github/workflows/test.yml"
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
