--- a/.pages.yml
+++ b/.pages.yml
@@ -8,11 +8,13 @@ content:
     path: src/content/blog
     view:
       fields: [ title, draft, publishDate, category, tags ]
+      sort: [date]
+      search: [title, category]
     fields:
       - { name: publishDate, label: Date, type: date }
       - { name: category, label: Category, type: string }
       - { name: title, label: Title, type: string, required: true }
-      - { name: slug, label: Slug, type: string }
+      - { name: slug, label: Slug, type: string, required: true }
       - { name: draft, label: Draft, type: boolean }
       - { name: tags, label: Tags, type: string, list: true }
       - { name: body, label: Body, type: rich-text }
