--- a/.pages.yml
+++ b/.pages.yml
@@ -12,7 +12,7 @@ content:
       search: [title, category]
     fields:
       - { name: publishDate, label: Date, type: date }
-      - { name: category, label: Category, type: string }
+      - { name: category, label: Category, type: select, options: { values: [tech, idea, life] } }
       - { name: title, label: Title, type: string, required: true }
       - { name: slug, label: Slug, type: string, required: true }
       - { name: draft, label: Draft, type: boolean }
