ci: 連続プッシュ時に1つ前のワークフローを停止できるようにする
refs: https://docs.github.com/ja/actions/using-jobs/using-concurrency

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,10 @@ on:
       - "src/**"
       - ".github/workflows/ci.yml"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint:
     runs-on: ubuntu-latest
