--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -2,13 +2,12 @@ name: Setup Node
 runs:
   using: "composite"
   steps:
-    - uses: pnpm/action-setup@v4
+    - run: corepack enable
+      shell: bash
     - uses: actions/setup-node@v4
       with:
         node-version-file: ".tool-versions"
         cache: pnpm
         cache-dependency-path: "pnpm-lock.yaml"
-    - run: npm run corepack
-      shell: bash
-    - run: pnpm i
+    - run: pnpm i --frozen-lockfile
       shell: bash
