--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,20 +29,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup-node
-      - run: pnpm check
-  unit-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/setup-node
-      - run: pnpm test
-  build:
-    runs-on: ubuntu-latest
-    needs: [lint]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/setup-node
-      - run: pnpm build
+      - name: lint
+        run: pnpm check
+      - name: build
+        run: pnpm build
       - uses: actions/upload-artifact@v4
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
@@ -51,9 +41,15 @@ jobs:
           if-no-files-found: error
           retention-days: 1
           overwrite: true
+  unit-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-node
+      - run: pnpm test
   publish:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [lint, unit-test]
     if: ${{ github.ref == 'refs/heads/main' }}
     steps:
       - uses: actions/checkout@v4
@@ -70,6 +66,6 @@ jobs:
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
   actions-timeline:
     runs-on: ubuntu-latest
-    needs: [lint, unit-test, build]
+    needs: [lint, unit-test]
     steps:
       - uses: Kesin11/actions-timeline@v1
