--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,15 +24,21 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  lint:
+  check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/setup-node
       - name: lint
-        run: pnpm check
-      - name: build
-        run: pnpm build
+        run: pnpm check:biome
+      - name: unit-test
+        run: pnpm test
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-node
+      - run: pnpm check:astro && pnpm build
       - uses: actions/upload-artifact@v4
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
@@ -41,15 +47,9 @@ jobs:
           if-no-files-found: error
           retention-days: 1
           overwrite: true
-  unit-test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/setup-node
-      - run: pnpm test
   publish:
     runs-on: ubuntu-latest
-    needs: [lint, unit-test]
+    needs: [check, build]
     if: ${{ github.ref == 'refs/heads/main' }}
     steps:
       - uses: actions/checkout@v4
@@ -66,6 +66,6 @@ jobs:
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
   actions-timeline:
     runs-on: ubuntu-latest
-    needs: [lint, unit-test]
+    needs: [check, build]
     steps:
-      - uses: Kesin11/actions-timeline@v1
+      - uses: Kesin11/actions-timeline@v2
