--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,12 +33,8 @@ jobs:
         run: pnpm check
       - name: unit-test
         run: pnpm test
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/setup-node
-      - run: pnpm build
+      - name: build
+        run: pnpm build
       - uses: actions/upload-artifact@v4
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
@@ -49,7 +45,7 @@ jobs:
           overwrite: true
   publish:
     runs-on: ubuntu-latest
-    needs: [check, build]
+    needs: [check]
     if: ${{ github.ref == 'refs/heads/main' }}
     steps:
       - uses: actions/checkout@v4
@@ -66,6 +62,6 @@ jobs:
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
   actions-timeline:
     runs-on: ubuntu-latest
-    needs: [check, build]
+    needs: [check]
     steps:
       - uses: Kesin11/actions-timeline@v2
