ci: フォント問題があるので、playwrightを一旦コメントアウトし、ローカルでのみ起動さ

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -6,3 +6,7 @@ pre-commit:
       run: pnpm check:astro
     check:biome:
       run: pnpm check:biome
+    test:
+      run: pnpm test run
+    test:e2e:
+      run: pnpm test:e2e
