--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint": "biome lint --write .",
     "test": "vitest --exclude e2e",
     "test:e2e": "playwright test",
+    "test:e2e:update": "playwright test --update-snapshots",
     "astro": "astro"
   },
   "dependencies": {
