--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "check:biome": "biome check .",
     "format": "biome format --write .",
     "lint": "biome lint --write .",
-    "test": "vitest --exclude e2e",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
     "test:e2e": "playwright test",
     "test:e2e:update": "playwright test --update-snapshots",
     "astro": "astro"
@@ -54,8 +55,14 @@
     "@biomejs/biome": "1.8.3",
     "@playwright/test": "1.45.2",
     "@tailwindcss/typography": "0.5.13",
+    "@testing-library/dom": "10.3.2",
+    "@testing-library/jest-dom": "6.4.6",
     "@types/node": "20.14.11",
     "@types/sanitize-html": "2.11.0",
+    "@vitest/browser": "2.0.3",
+    "@vitest/ui": "2.0.3",
+    "happy-dom": "14.12.3",
+    "jsdom": "24.1.0",
     "lefthook": "1.7.4",
     "vitest": "2.0.3",
     "wrangler": "3.65.1"
