--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@expressive-code/plugin-line-numbers": "0.35.6",
     "@fontsource-variable/lexend": "5.0.22",
     "@fontsource-variable/montserrat": "5.0.21",
+    "@fontsource-variable/noto-sans-jp": "5.1.0",
     "@iconify-json/lucide": "1.1.209",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
