--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
 	"files": {
 		"include": ["./**/*.astro", "./**/*.ts", "./**/*.tsx", "./**/*.json"],
 		"ignore": [
@@ -45,10 +45,10 @@
 			"correctness": {},
 			"nursery": {
 				"all": true,
-				"noUndeclaredDependencies": "off",
-				"useImportExtensions": "off",
-				"noReactSpecificProps": "off",
-				"useImportRestrictions": "off"
+				"useImportRestrictions": "off",
+				"useExplicitType": "off",
+				"noSecrets": "off",
+				"noProcessEnv": "off"
 			},
 			"performance": { "all": true },
 			"security": { "all": true },
@@ -68,7 +68,8 @@
 			},
 			"suspicious": {
 				"all": true,
-				"noArrayIndexKey": "off"
+				"noArrayIndexKey": "off",
+				"noReactSpecificProps": "off"
 			}
 		}
 	},
