--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,7 @@ jobs:
       deployments: write
     steps:
       - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup-node
       - uses: actions/download-artifact@v4
         with:
           name: dist
