--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "happy-dom": "15.11.7",
     "jsdom": "25.0.1",
     "lefthook": "1.9.3",
-    "vitest": "2.1.8",
+    "vitest": "3.0.0-beta.2",
     "wrangler": "3.96.0"
   }
 }
