--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
     "jsxImportSource": "react",
     "types": ["vitest/globals"]
   },
+  "include": [".astro/types.d.ts", "**/*"],
   "exclude": ["dist"]
 }
