--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@astrojs/mdx": "4.1.0",
     "@astrojs/react": "4.2.1",
     "@astrojs/rss": "4.0.11",
-    "@astrojs/tailwind": "6.0.0",
     "@expressive-code/plugin-line-numbers": "0.40.2",
     "@extractus/feed-extractor": "7.1.4",
     "@extractus/oembed-extractor": "4.0.6",
@@ -38,6 +37,7 @@
     "@fontsource-variable/montserrat": "5.1.1",
     "@fontsource-variable/noto-sans-jp": "5.1.1",
     "@iconify-json/lucide": "1.2.27",
+    "@tailwindcss/vite": "^4.0.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "astro": "5.4.1",
@@ -56,7 +56,7 @@
     "sanitize-html": "2.14.0",
     "tailwind-gradient-mask-image": "1.2.0",
     "tailwind-merge": "3.0.2",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.9",
     "typescript": "5.8.2"
   },
   "packageManager": "pnpm@10.5.2",
