--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/sanitize-html": "2.13.0",
     "@vitest/browser": "3.0.7",
     "@vitest/ui": "3.0.7",
+    "happy-css-modules": "3.2.0",
     "happy-dom": "17.1.8",
     "jsdom": "26.0.0",
     "lefthook": "1.11.2",
