--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "corepack": "corepack enable pnpm",
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "rm -rf dist && astro build && pnpm build:pagefind",
-    "build:pagefind": "pagefind --site dist",
+    "build": "rm -rf dist && astro build",
     "deploy": "pnpm build && wrangler pages deploy dist",
     "preview": "wrangler pages dev ./dist",
     "preview:local": "astro preview",
@@ -43,10 +42,8 @@
     "astro": "5.5.2",
     "astro-expressive-code": "0.40.2",
     "astro-icon": "1.1.5",
-    "astro-pagefind": "1.8.2",
     "clsx": "2.1.1",
     "ofetch": "1.4.1",
-    "pagefind": "1.3.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "rehype-autolink-headings": "7.1.0",
