--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@ascorbic/feed-loader": "1.0.4",
     "@astrojs/check": "0.9.4",
+    "@astrojs/cloudflare": "^12.2.4",
     "@astrojs/markdown-remark": "6.3.1",
     "@astrojs/mdx": "4.2.1",
     "@astrojs/react": "4.2.1",
