--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@astrojs/mdx": "4.2.1",
     "@astrojs/react": "4.2.1",
     "@astrojs/rss": "4.0.11",
+    "@auth/core": "^0.37.4",
     "@expressive-code/plugin-line-numbers": "0.40.2",
     "@extractus/feed-extractor": "7.1.4",
     "@extractus/oembed-extractor": "4.0.6",
@@ -43,6 +44,7 @@
     "astro": "5.5.4",
     "astro-expressive-code": "0.40.2",
     "astro-icon": "1.1.5",
+    "auth-astro": "^4.2.0",
     "clsx": "2.1.1",
     "ofetch": "1.4.1",
     "react": "19.0.0",
