--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@expressive-code/plugin-line-numbers": "0.40.2",
     "@extractus/feed-extractor": "7.1.4",
     "@extractus/oembed-extractor": "4.0.6",
+    "@fontsource-variable/geist": "5.2.5",
+    "@fontsource-variable/geist-mono": "5.2.5",
     "@fontsource-variable/lexend": "5.2.6",
     "@fontsource-variable/montserrat": "5.2.5",
     "@fontsource-variable/noto-sans-jp": "5.2.5",
@@ -42,6 +44,7 @@
     "astro": "5.5.4",
     "astro-expressive-code": "0.40.2",
     "astro-icon": "1.1.5",
+    "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "ofetch": "1.4.1",
     "react": "19.0.0",
