build: cloudflare pagesからworkersへのstatic assetsをdeployする形式に変更

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "rm -rf dist && astro build",
-    "deploy": "pnpm build && wrangler pages deploy dist",
-    "preview": "wrangler pages dev ./dist",
+    "deploy": "pnpm build && wrangler deploy",
+    "preview": "wrangler dev",
     "preview:local": "astro preview",
     "check": "pnpm check:astro && pnpm check:biome",
     "check:astro": "astro check",
