--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "tailwind-gradient-mask-image": "1.2.0",
     "tailwind-merge": "3.3.0",
     "tailwindcss": "4.1.6",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "vite-plugin-simple-scope": "2.0.3"
   },
   "packageManager": "pnpm@10.10.0",
   "devDependencies": {
