--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "astro": "5.7.13",
     "astro-expressive-code": "0.41.2",
     "astro-icon": "1.1.5",
+    "astro-og": "^0.3.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "ofetch": "1.4.1",
